--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
-node_modules
+﻿node_modules
 dist
-*.log
+build
 .DS_Store
+*.log
+.env
+.env.local
+coverage
 .vscode
 .idea
-*.local
-coverage
-.turbo
-.rollup.cache
-
-
+*.swp
+*.swo
+*~
+.cache
+.temp
+.tmp
