feat: 新增Excel Viewer v2.0核心功能与优化
- 添加公式引擎支持100+ Excel函数
- 实现数据验证系统(7种验证类型)
- 新增查找替换功能(支持正则表达式)
- 引入高级筛选和多列排序
- 添加条件格式支持(数据条、色阶、图标集)
- 实现快捷键系统(15+默认快捷键)
- 增加国际化支持(中英文双语)
- 优化内存管理(LRU缓存、稀疏矩阵)
- 添加Web Worker支持后台解析
- 完善TypeScript类型定义
- 更新文档(新增8份技术文档)
- 配置ESLint和Prettier规范代码风格

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,15 +1,24 @@
 {
   "name": "@ldesign/excel-viewer-core",
-  "version": "1.0.0",
-  "description": "Excel 预览编辑插件核心库",
+  "version": "2.0.0",
+  "description": "功能强大的 Excel 预览编辑插件核心库 - 支持公式计算、数据验证、查找替换等企业级功能",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "README.md",
+    "LICENSE"
   ],
   "scripts": {
-    "build": "rollup -c ../../rollup.config.js --environment BUILD:core"
+    "build": "rollup -c ../../rollup.config.js --environment BUILD:core",
+    "build:prod": "NODE_ENV=production rollup -c ../../rollup.config.js --environment BUILD:core",
+    "dev": "rollup -c ../../rollup.config.js --environment BUILD:core --watch",
+    "type-check": "tsc --noEmit",
+    "lint": "eslint src --ext .ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "xlsx": "^0.18.5",
@@ -19,10 +28,30 @@
   "keywords": [
     "excel",
     "spreadsheet",
-    "viewer"
+    "viewer",
+    "editor",
+    "xlsx",
+    "formula",
+    "validation",
+    "find-replace",
+    "i18n",
+    "performance",
+    "webworker"
   ],
   "author": "ldesign",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ldesign/excel-viewer.git",
+    "directory": "packages/core"
+  },
+  "bugs": {
+    "url": "https://github.com/ldesign/excel-viewer/issues"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "sideEffects": false
 }
 
 
