feat: 初始化Excel渲染器项目基础架构
添加核心包基础结构，包括类型定义、主题管理器和国际化管理器
实现Vue适配包基础组件和Composables
配置Monorepo工作区和构建工具
添加示例项目和文档

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,41 @@
-﻿node_modules
+# Dependencies
+node_modules
+.pnpm-store
+
+# Build outputs
 dist
 build
-.DS_Store
+*.tsbuildinfo
+
+# Logs
+logs
 *.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Environment variables
 .env
 .env.local
+.env.*.local
+
+# Testing
 coverage
-.vscode
-.idea
-*.swp
-*.swo
-*~
+.nyc_output
+
+# Cache
 .cache
-.temp
-.tmp
+.parcel-cache
+.eslintcache
